# DjangoInitTrack

./: pyproject.toml
tracker/accounts/: forms.py  urls.py  views.py
tracker/accounts/templates/: registration.html
tracker/inittracker/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
tracker/inittracker/migrations/: 0001_initial.py  0002_alter_monster_description_alter_player_description.py
tracker/inittracker/templates/: base.html  create_encounter.html  encounter_detail.html  index.html  user_encounters.html
tracker/static/css/: tracker.css
tracker/tracker/: settings.py  urls.py
