[tool.poetry]
name = "djangoinittracker"
version = "0.1.0"
description = ""
authors = ["Vadim <vadimmelnik977@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.0.3"
psycopg = {extras = ["binary"], version = "^3.1.18"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
